<resources>
    <string name="app_name">TestApp</string>
    <string name="apponepage_name">登录</string>
    <string name="action_settings">Settings</string>
    <string name="button_one">One</string>
    <string name="button_two">Two</string>
    <string name="button_three">Three</string>
    <string name="button_four">Four</string>
    <string name="button_1">账户</string>
    <string name="button_2">密码</string>
    <string name="edittext_1">请输入账号</string>
    <string name="edittext_2">请输入密码</string>
    <string name="textview_1">测试标题栏</string>

</resources>
