<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="iphone.com.testapp.MainActivity"
    tools:showIn="@layout/activity_main">



    <Button
        android:id="@+id/button_1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/apple_pic"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:text="@string/button_one"/>
    <Button
        android:id="@+id/button_2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:background="@drawable/banana_pic"
        android:layout_weight="1"
        android:text="@string/button_two"/>
    <Button
        android:id="@+id/button_3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/cherry_pic"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:text="@string/button_three"/>
    <Button
        android:id="@+id/button_4"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:background="@drawable/pineapple_pic"
        android:layout_weight="1"
        android:text="@string/button_four"/>

</LinearLayout>
